--- a/css/main.css
+++ b/css/main.css
@@ -167,6 +167,26 @@ body, button {
   margin: auto;
 }
 
+.wasclicked_img {
+  width: 100px;
+  position: absolute;
+  top: -65px;
+  right: -73px;
+  opacity: 0;
+  -webkit-transition: opacity .4s ease-in-out;
+  transition: opacity .4s ease-in-out;
+}
+
+.wasclicked_active {
+  opacity: 1;
+  -webkit-transition: opacity .4s ease-in-out;
+  transition: opacity .4s ease-in-out;
+}
+
+.plant {
+  z-index: 200;
+}
+
 .nav {
   -webkit-transition: top 0.3s;
   transition: top 0.3s;
