--- a/css/main.scss
+++ b/css/main.scss
@@ -65,7 +65,7 @@ body, button {
         width: 100px;
         position: absolute;
         top: -65px;
-        right: -73px;
+        right: 28px;
         opacity: 0;
         transition: opacity .4s ease-in-out;
     }
@@ -602,6 +602,20 @@ body, button {
 }
 
 @media only screen and (min-width: 900px) {
+    .wasclicked {
+        &_img {
+            width: 100px;
+            position: absolute;
+            top: -65px;
+            right: -73px;
+            opacity: 0;
+            transition: opacity .4s ease-in-out;
+        }
+        &_active {
+            opacity: 1;
+            transition: opacity .4s ease-in-out;
+        }
+    }
     #main_contain {
         & .hero {
             width: 50%;
