--- a/css/main.scss
+++ b/css/main.scss
@@ -564,6 +564,14 @@ body, button {
     margin-top: 2em;
 }
 
+.current {
+    font-weight: 100;
+    font-family: "VolteRegular";
+    font-size: .75em;
+    font-style: italic;
+    color: $darkpurp;
+}
+
 //MEDIA QUERIES
 
 @media only screen and (min-width: 500px) {
