--- a/css/main.scss
+++ b/css/main.scss
@@ -375,6 +375,7 @@ body, button {
             }
             &-thanks {
                 font-weight: 600;
+                letter-spacing: -.025em;
             }
         }
     }
